--- a/Front-End/Registration/Admin/login/A_user_login.html
+++ b/Front-End/Registration/Admin/login/A_user_login.html
@@ -32,9 +32,9 @@
                                 <input id="email_input" type="email" class="validate">
                                 <label for="password_input">Password</label>
                                 <input id="password_input" type="password" class="validate">
-                                <div class="txt2"><a class="forget" href="#">Forget your password?</a>   </div> 
-                            <button class="login-btn">Login </button>
-                            <p class="already">Don't have an account? <a href="#">Sign Up</a></p>
+                                <div class="txt2"><a class="forget" href="../forget_password/A_forget_password.html">Forget your password?</a>   </div>   
+                             <button class="login-btn">Login</button>
+                               
                         </form>
                 </div>
             </div>
