--- a/Front-End/Registration/Doctors/forget_password/D_verification.html
+++ b/Front-End/Registration/Doctors/forget_password/D_verification.html
@@ -10,8 +10,8 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="P_user_login.css">
-    <title> Admin Login</title>
+    <link rel="stylesheet" href="D_forget_password.css">
+    <title> Verify Code</title>
 </head>
 <body>
  <!-- form section start -->
@@ -22,19 +22,15 @@
             <div class="logo">
             </div>
             <div class="workinghny-block-grid">
-                    <img src="images/patient_login.jpg" class="img-responsive" alt="img" />
+                    <img src="images/enter code.jpg" class="img-responsive" alt="img" />
                 <div class="form-right-inf">
                     
-               <div class="txt1">     <center><p class="txt">PATIENT | lOGIN</p></center></div>
+               <div class="txt1"> <center><p class="txt">Code Verification</p></center>
+            <center><p>Please, Enter the code sent to your email.</p></center></div>
                   
                         <form action="#" class="signin-form" method="post">
-                                <label for="email_input">Email</label>
-                                <input id="email_input" type="email" class="validate">
-                                <label for="password_input">Password</label>
-                                <input id="password_input" type="password" class="validate">
-                                <div class="txt2"><a class="forget" href="#">Forget your password?</a>   </div> 
-                            <button class="login-btn">Login </button>
-                            <p class="already">Don't have an account? <a href="#">Sign Up</a></p>
+                            <input id="email_input"  type="text" class="validate" placeholder="Enter Code Sent">
+                                <button class="login-btn"><a href="D_Newpass.html">Next</a></button>
                         </form>
                 </div>
             </div>
