--- a/Front-End/Registration/Patients/registration/P_user_reg.html
+++ b/Front-End/Registration/Patients/registration/P_user_reg.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js.js"></script>
     <link rel="stylesheet" href="P_user_reg.css">
-    <title> Admin Login</title>
+    <title> Patient Register</title>
 </head>
 <body>
  <!-- form section start -->
