--- a/Front-End/Registration/Doctors/forget_password/D_forget_password.html
+++ b/Front-End/Registration/Doctors/forget_password/D_forget_password.html
@@ -29,8 +29,9 @@
                   
                         <form action="#" class="signin-form" method="post">
                                 <input id="email_input" type="email" class="validate" placeholder="Enter Your Email For Verification">
-                            <button class="login-btn">Next</button>
+                            
                         </form>
+                     <a href="D_Newpass.html"><button class="login-btn">Next</button></a>
                 </div>
             </div>
         </div>
