--- a/Front-End/Registration/Doctors/login/D_user_login.html
+++ b/Front-End/Registration/Doctors/login/D_user_login.html
@@ -32,10 +32,11 @@
                                 <input id="email_input" type="email" class="validate">
                                 <label for="password_input">Password</label>
                                 <input id="password_input" type="password" class="validate">
-                                <div class="txt2"><a class="forget" href="#">Forget your password?</a>   </div> 
-                            <button class="login-btn">Login </button>
-                            <p class="already">Don't have an account? <a href="#">Sign Up</a></p>
+                                <div class="txt2"><a class="forget" href="../../Doctors/forget_password/D_forget_password.html">Forget your password?</a>   </div> 
+
                         </form>
+                        <a href="../../Doctors/dashboard/D_dashboard.html" ><button class="login-btn">Login </button></a>
+
                 </div>
             </div>
         </div>
