--- a/Front-End/Registration/Doctors/dashboard/D_dashboard.html
+++ b/Front-End/Registration/Doctors/dashboard/D_dashboard.html
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li class="log_out">
-          <a href="#">
+          <a href="../../main/index.html">
             <i class='bx bx-log-out'></i>
             <span class="links_name">Log out</span>
           </a>
