--- a/Front-End/Registration/Patients/dashboard/P_dashboard.html
+++ b/Front-End/Registration/Patients/dashboard/P_dashboard.html
@@ -59,7 +59,7 @@
           </a>
         </li>
         <li class="log_out">
-          <a href="#">
+          <a href="../../main/index.html">
             <i class='bx bx-log-out'></i>
             <span class="links_name">Log out</span>
           </a>
