--- a/Front-End/Registration/Patients/login/P_user_login.html
+++ b/Front-End/Registration/Patients/login/P_user_login.html
@@ -25,21 +25,21 @@
                     <img src="images/patient_login.jpg" class="img-responsive" alt="img" />
                 <div class="form-right-inf">
                     
-               <div class="txt1">     <center><p class="txt">PATIENT | lOGIN</p></center></div>
+               <div class="txt1"><center><p class="txt">PATIENT | lOGIN</p></center></div>
                   
-                        <form action="#" class="signin-form" method="post">
+                        <form class="signin-form">
                                 <label for="email_input">Email</label>
                                 <input id="email_input" type="email" class="validate">
                                 <label for="password_input">Password</label>
                                 <input id="password_input" type="password" class="validate">
-                                <div class="txt2"><a class="forget" href="#">Forget your password?</a>   </div> 
-                            <button class="login-btn">Login </button>
-                            <p class="already">Don't have an account? <a href="#">Sign Up</a></p>
                         </form>
+                        <div class="txt2"><a class="forget" href="../forget_password/P_forget_password.html">Forget your password?</a>   </div>                             
+                        <a href="../dashboard/P_dashboard.html"><button class="login-btn">Login </button> </a>
                 </div>
             </div>
         </div>
     </div>
+
 </section>
 </body>
 </html>
