--- a/Front-End/Registration/Doctors/forget_password/D_Newpass.html
+++ b/Front-End/Registration/Doctors/forget_password/D_Newpass.html
@@ -22,7 +22,7 @@
             <div class="logo">
             </div>
             <div class="workinghny-block-grid">
-                    <img src="images/Login Illustration.png" class="img-responsive" alt="img" />
+                    <img src="images/Secure login-pana.png" class="img-responsive" alt="img" />
                 <div class="form-right-inf">
                     
                <div class="txt1"> <center><p class="txt">Change Your Password</p></center></div>
