--- a/Front-End/Registration/Doctors/forget_password/D_verification.html
+++ b/Front-End/Registration/Doctors/forget_password/D_verification.html
@@ -22,16 +22,16 @@
             <div class="logo">
             </div>
             <div class="workinghny-block-grid">
-                    <img src="images/enter code.jpg" class="img-responsive" alt="img" />
+                    <img src="images/Two factor authentication-pana.png" class="img-responsive" alt="img" />
                 <div class="form-right-inf">
                     
                <div class="txt1"> <center><p class="txt">Code Verification</p></center>
             <center><p>Please, Enter the code sent to your email.</p></center></div>
                   
                         <form action="#" class="signin-form" method="post">
-                            <input id="email_input"  type="text" class="validate" placeholder="Enter Code Sent">
-                                <button class="login-btn"><a href="D_Newpass.html">Next</a></button>
+                            <input id="email_input"  type="text" class="validate" placeholder="Enter Code Sent">     
                         </form>
+                        <a href="D_Newpass.html"><button class="login-btn">Next</button></a>
                 </div>
             </div>
         </div>
