--- a/Front-End/Registration/Patients/forget_password/P_forget_password.html
+++ b/Front-End/Registration/Patients/forget_password/P_forget_password.html
@@ -29,8 +29,8 @@
                   
                         <form action="#" class="signin-form" method="post">
                                 <input id="email_input" type="email" class="validate" placeholder="Enter Your Email For Verification">
-                            <button class="login-btn">Next</button>
                         </form>
+                        <a href="P_verification.html"><button class="login-btn">Next</button></a>
                 </div>
             </div>
         </div>
