--- a/Front-End/Registration/main/index.html
+++ b/Front-End/Registration/main/index.html
@@ -144,7 +144,34 @@
 
 
   <!-- Map Section-->
+  <section id="contact" class="contact">
+    <div class="container">
 
+      <div class="section-title" data-aos="fade-up">
+        <h2 style="margin-bottom: 10px;">Contact Us</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-5" class="col-md-5" class="col-sm-5"></div>
+        <hr>
+        <div class="col-lg-5" class="col-md-5" class="col-sm-5"></div>
+
+    </div>
+
+    <div class="row">
+        <div id="map" class="col-lg-12" class="col-md-12" class="col-sm-12" class="aos-item" data-aos="fade-up"
+            data-aos-duration="2000">
+            <!--comment here width of bage-->
+            <!--map will be putted in iframe-->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2168.156489075589!
+              2d31.434846!3d30.018033!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x56aa00ffd13c4c05!2z2YXYs9is2K8g
+              2KfZhNmF2LPYqti02YHZiSDYp9mE2KzZiNmJINin2YTYqtiu2LXYtdmJ!5e1!3m2!1sar!2sus!4v1600866432511!5m2!1sar!2sus"
+                width="100%" height="620px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe>
+        </div>
+        <hr>
+    </div>
+  </section>
   <!-- End Map Section -->
 
 
