Update Login Page by amira

--- a/Front-End/Registration/Doctors/login/D_user_login.html
+++ b/Front-End/Registration/Doctors/login/D_user_login.html
@@ -23,15 +23,15 @@
                 <div class="logo">
                 </div>
                 <div class="workinghny-block-grid">
-                    <img src="images/candidate-login.png" width="600px" height="500px" style="object-fit: cover;">
+                    <img src="images/Login-rafiki.png" >
                     <div class="form-right-inf">
                         <div class="grid-item" id="center">
-                            <p style="color: rgb(0, 162, 255); font-size: 50px;">Login</p><br>
+                            <p style="color: #37474F; font-size: 50px;">Login</p><br>
                             <input class="input1" type="text" placeholder="Username" required> </input><br>
                             <input class="input1" type="password" placeholder="Password" required></input><br><br>
-                            <a href="../../Doctors/dashboard/D_dashboard.html"><button id="btn" type="submit"> <strong>
-                                    Login</strong></button><br></a>
-                            <a class="a1" href="../../Doctors/forget_password/D_forget_password.html" style="font-size: 15px;">forget your password?</a>
+                            <button id="btn" type="submit"> <strong>
+                                    Login</strong></button><br><br><hr>
+                            <a class="a1" href="#" style="font-size: 20px;">forget your password?</a>
                         </div>
                     </div>
                 </div>
