Update Doctor Login Page

--- a/Front-End/Registration/Doctors/login/D_user_login.html
+++ b/Front-End/Registration/Doctors/login/D_user_login.html
@@ -29,9 +29,11 @@
                             <p style="color: #37474F; font-size: 50px;">Login</p><br>
                             <input class="input1" type="text" placeholder="Username" required> </input><br>
                             <input class="input1" type="password" placeholder="Password" required></input><br><br>
+                            <a href="../dashboard/D_dashboard.html">
                             <button id="btn" type="submit"> <strong>
                                     Login</strong></button><br><br><hr>
-                            <a class="a1" href="#" style="font-size: 20px;">forget your password?</a>
+                                </a>
+                            <a class="a1" href="../forget_password/D_forget_password.html" style="font-size: 20px;">forget your password?</a>
                         </div>
                     </div>
                 </div>
