--- a/Front-End/Registration/main/index.html
+++ b/Front-End/Registration/main/index.html
@@ -33,15 +33,20 @@
 
 <body>
   <!-- Top Bar Section -->
-
+ 
   <!--End Top Bar-->
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
+
     <div class="container d-flex align-items-center justify-content-between">
       <div class="logo">
-        <h1><a href="index.html">HMIS</a></h1>
+      <img src="images/hospital.png">
       </div>
+      <div class="container d-flex align-items-center justify-content-between">
+        <div class="logo">
+          <h1><a href="index.html">HMIS</a></h1>
+        </div>
       <!-- .navbar -->
       <nav id="navbar" class="navbar">
         <ul>
@@ -55,6 +60,7 @@
       </nav>
   <!-- End navbar -->
     </div>
+ 
   </header>
   <!-- End Header -->
 
@@ -185,6 +191,7 @@
         <div class="section-title" data-aos="fade-up">
           <h2>Contact Us</h2>
         </div>
+        <hr>
 
         <div class="row">
 
