Add Home Button

--- a/Front-End/Registration/Radiology/index.html
+++ b/Front-End/Registration/Radiology/index.html
@@ -51,12 +51,12 @@
       </div>
       <div class="container d-flex align-items-center justify-content-between">
         <div class="logo">
-          <h1><a href="index.html">HMIS</a></h1>
+          <h1><a href="../main/index.html">HMIS</a></h1>
         </div>
       <!-- .navbar -->
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#">Home</a></li>
+          <li><a class="nav-link scrollto active" href="../main/index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#Services">Services</a></li>
 
         </ul>
