Update patient logo

--- a/Front-End/Registration/main/index.html
+++ b/Front-End/Registration/main/index.html
@@ -168,7 +168,7 @@
                     <div class="col-md-3 col-sm-6">
                          <div class="team-thumb">
                               <div class="team-image">
-                                   <img src="images/Register.png" class="img-responsive" alt="#">
+                                   <img src="images/register.png" class="img-responsive" alt="#">
                               </div>
                               <div class="team-info">
                                 <a href="../Patients/login/P_user_login.html"><h3>Patient</h3></a>
