--- a/Front-End/Registration/Doctors/login/D_user_login.html
+++ b/Front-End/Registration/Doctors/login/D_user_login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>login</title>
+    <title>Doctor Login</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--mobile meta-->
@@ -26,7 +26,7 @@
                     <img src="images/Login-rafiki.png" >
                     <div class="form-right-inf">
                         <div class="grid-item" id="center">
-                            <p style="color: #37474F; font-size: 50px;">Login</p><br>
+                            <p style="color: #37474F; font-size: 50px;">Doctor Login</p><br>
                             <input class="input1" type="text" placeholder="Username" required> </input><br>
                             <input class="input1" type="password" placeholder="Password" required></input><br><br>
                             <a href="../dashboard/D_dashboard.html">
@@ -34,6 +34,9 @@
                                     Login</strong></button><br><br><hr>
                                 </a>
                             <a class="a1" href="../forget_password/D_forget_password.html" style="font-size: 20px;">forget your password?</a>
+                            <br><p>Don't have an account?
+                            <a class="a1" href="../registration/D_user_reg.html" style="font-size: 20px;"> Sign Up</a>
+                        </p>
                         </div>
                     </div>
                 </div>
