--- a/Front-End/Registration/Patients/login/P_user_login.html
+++ b/Front-End/Registration/Patients/login/P_user_login.html
@@ -11,7 +11,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="P_user_login.css">
-    <title> Admin Login</title>
+    <title> Patient Login</title>
 </head>
 <body>
  <!-- form section start -->
@@ -33,8 +33,12 @@
                                 <label for="password_input">Password</label>
                                 <input id="password_input" type="password" class="validate">
                         </form>
-                        <div class="txt2"><a class="forget" href="../forget_password/P_forget_password.html">Forget your password?</a>   </div>                             
+                        <div class="txt2"><a class="forget" href="../forget_password/P_forget_password.html">Forget your password?</a> </div>                             
                         <a href="../dashboard/P_dashboard.html"><button class="login-btn">Login </button> </a>
+                        <br>
+                        <div class="d-flex justify-content-center links">
+                            Don't have an account?<a href="../registration/P_user_reg.html">Sign Up</a>
+                        </div>
                 </div>
             </div>
         </div>
